Fix navbar display bugs on small screens

--- a/mon-portfolio/src/style.css
+++ b/mon-portfolio/src/style.css
@@ -29,30 +29,7 @@
   #mobile-navbar a {
     font-family: var(--font-secondary);
   }
- [data-hover="home"] a:hover::after{
-    content: "Accueil";
-    margin-left: var(--margin-left);
-  }
-  [data-hover="about"] a:hover::after{
-    content: "À Propos";
-    margin-left: var(--margin-left);
-  }
-  [data-hover="services"] a:hover::after{
-    content: "Services";
-    margin-left: var(--margin-left);
-  }
-  [data-hover="skills"] a:hover::after{
-    content: "Compétences";
-    margin-left: var(--margin-left);
-  }
-   [data-hover="projects"] a:hover::after{
-    content: "Projets";
-    margin-left: var(--margin-left);
-  }
-   [data-hover="contacts"] a:hover::after{
-    content: "Contacts";
-    margin-left: var(--margin-left);
-  }
+
   .animate-fade-in {
     animation: fade-in 0.3s ease-in-out;
     transition: opacity 1s;
@@ -85,6 +62,32 @@
      }
   }
   
+  @media screen and (min-width: 768px) {
+    [data-hover="home"] a:hover::after{
+    content: "Accueil";
+    margin-left: var(--margin-left);
+  }
+  [data-hover="about"] a:hover::after{
+    content: "À Propos";
+    margin-left: var(--margin-left);
+  }
+  [data-hover="services"] a:hover::after{
+    content: "Services";
+    margin-left: var(--margin-left);
+  }
+  [data-hover="skills"] a:hover::after{
+    content: "Compétences";
+    margin-left: var(--margin-left);
+  }
+   [data-hover="projects"] a:hover::after{
+    content: "Projets";
+    margin-left: var(--margin-left);
+  }
+   [data-hover="contacts"] a:hover::after{
+    content: "Contacts";
+    margin-left: var(--margin-left);
+  }
+  }
 
 
 
